bk_ida/gccida/c1/replace_reg
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_reg/src/reg-stack.c:1313:17: error: must use 'enum' tag to refer to type 'mode_class'
if ( ( *( const mode_class *)( ( char *)mode_class_0 + ( ( v2 >> 14) & 0x3FC)) | 4) != 6 ) 
                ^
                enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_reg/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_reg/src/reg-stack.c:1313:41: error: use of undeclared identifier 'mode_class_0'
if ( ( *( const mode_class *)( ( char *)mode_class_0 + ( ( v2 >> 14) & 0x3FC)) | 4) != 6 ) 
                                        ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/replace_reg/src/obj/reg-stack.o] Error 1
